--- a/ComprasEqComputo/ComprasEqComputo.csproj
+++ b/ComprasEqComputo/ComprasEqComputo.csproj
@@ -41,6 +41,7 @@
       <EmbedInteropTypes>True</EmbedInteropTypes>
       <HintPath>..\..\Microsoft.Office.Interop.Outlook.dll</HintPath>
     </Reference>
+    <Reference Include="Microsoft.VisualBasic" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
